# module-4-pydantic-ai

./: .editorconfig  .env.example  .gitignore  README.md  main.py  pyproject.toml
.ai/examples/: README.md  planned-diffs-example.md  scaffold-example.yaml  scaffold-report-example.md  spec-example.yaml  stabilize-example.yaml  stabilize-report-example.md  task-example.yaml
.ai/schemas/: agent-notes.schema.v0.1.json  scaffold-artifact.schema.v0.1.json  spec-artifact.schema.v0.1.json  stabilize-artifact.schema.v0.1.json  task-file.schema.v0.1.json
.ai/tasks/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml  TASK-004.yaml  TASK-005.yaml  TASK-006.yaml  TASK-007.yaml  TASK-008.yaml  TASK-009.yaml  TASK-010.yaml  TASK-011.yaml
.ai/tools/: README.md  pyproject.toml  validate_markdown.py  validate_yaml.py
.github/: ci-cd-instructions.md  copilot-instructions.md  git-commit-instructions.md
.github/agents/: architect.agent.md  research-engineer.agent.md  senior-developer.agent.md
.github/instructions/: 3-pass-plan.instructions.md  scaffold-pass.instructions.md  spec-pass.instructions.md  stabilize-pass.instructions.md
.github/prompts/: scaffold-pass.prompt.md  spec-pass.prompt.md  stabilize-pass.prompt.md
.github/workflows/: ci.yml
RAG_Pipeline/: pyproject.toml
docs/: ADR.md  COPILOT-CLI.md  PLANNING.md  TASKS.md
docs/research/: SearXNG_HTTP_API_Research.md
tests/: test_config.py  test_package_layout.py  test_tools_brave.py  test_tools_searxng.py
web_search_agent/: __init__.py  agent.py  cli.py  config.py  mcp_server.py  models.py  tools.py
(+25 files in other folders)
