[project]
name = "module-4-pydantic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
]

[tool.uv.workspace]
members = [
    "RAG_Pipeline",
    ".ai/tools",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "python-dotenv>=1.0",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
